--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lint-staged-config-public",
+  "name": "node-modules-public",
   "version": "0.0.1",
   "description": "Public repo for lint-staged checks and scripts",
   "main": "index.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/svvsaga/lint-staged-config-public.git"
+    "url": "git+https://github.com/svvsaga/node-modules-public.git"
   },
   "author": "Statens Vegvesen",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/svvsaga/lint-staged-config-public/issues"
+    "url": "https://github.com/svvsaga/node-modules-public/issues"
   },
-  "homepage": "https://github.com/svvsaga/lint-staged-config-public#readme",
+  "homepage": "https://github.com/svvsaga/node-modules-public#readme",
   "dependencies": {
     "husky": "^7.0.4",
     "lint-staged": "^12.0.3",
