--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/node": "^16.11.9",
     "del-cli": "^4.0.1",
+    "node-modules-public": "github:svvsaga/node-modules-public#v0.0.3",
     "typescript": "^4.5.2"
   }
 }
