--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "del-cli lib",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "husky install && husky add .husky/pre-commit \"npx lint-staged\""
   },
   "bin": {
     "check-for-secrets": "./lib/scripts/check-for-secrets.js",
