--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "del-cli lib",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "echo 'run `./node_modules/node-modules-public/setup.sh` to finish setting up husky!'"
   },
   "bin": {
     "check-for-secrets": "./lib/scripts/check-for-secrets.js",
