--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "del-cli lib",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install",
+    "prepare": "npx husky install",
     "postinstall": "node postinstall.js"
   },
   "bin": {
