--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/svvsaga/node-modules-public#readme",
   "dependencies": {
     "@google-cloud/resource-manager": "^3.2.0",
+    "cli-select": "^1.1.2",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.0",
     "replace-in-file": "^6.3.5",
