--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "block-large-files": "./lib/scripts/block-large-files.js",
     "set-tf-modules-version": "./lib/scripts/set-tf-modules-version.js",
     "setup-example-pipeline": "./lib/scripts/setup-example-pipeline.js",
-    "generate-gcp-project-config": "./lib/scripts/generate-gcp-project-config.js"
+    "generate-gcp-project-config": "./lib/scripts/generate-gcp-project-config.js",
+    "generate-gcp-project-config-interactive": "./lib/scripts/generate-gcp-project-config-interactive.js"
   },
   "repository": {
     "type": "git",
